--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,71 +1,71 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.cforlando.streetartandroid"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 4
-        versionName "1.3"
-        multiDexEnabled true
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
-    packagingOptions {
-        exclude 'META-INF/LICENSE.txt'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    dexOptions {
-        incremental true
-        javaMaxHeapSize "4g"
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.parse.bolts:bolts-android:1.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:gridlayout-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.parse:parse-android:1.13.0'
-    compile 'com.parse:parseui-login-android:0.0.1'
-    compile 'com.parse:parseui-widget-android:0.0.1'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
-    compile 'com.google.maps.android:android-maps-utils:0.4.3'
-    compile 'com.android.support:palette-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-location:9.0.0'
-    compile 'com.google.android.gms:play-services-maps:9.0.0'
-    compile 'com.github.kaedea:Android-Cloud-TagView-Plus:7be657b31f'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.21.1'
+    compile 'com.google.maps.android:android-maps-utils:0.5'
+    compile 'com.android.support:palette-v7:25.3.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    // TODO: Implement MaterialChipView for new tags
+    compile 'com.robertlevonyan.view:MaterialChipView:1.0.1'
     compile 'io.github.yavski:fab-speed-dial:1.0.4'
-    compile 'com.github.tajchert:nammu:1.1.1'
+    compile 'com.github.tajchert:nammu:1.1.3'
     compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.github.nguyenhoanglam:ImagePicker:1.0.1'
     compile 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+    compile 'com.avast:android-styled-dialogs:2.3.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.hardsoftstudio:rxflux:0.4.1'
+    compile 'com.google.dagger:dagger:2.1'
+    compile 'com.airbnb.android:epoxy:1.7.5'
+    annotationProcessor 'com.airbnb.android:epoxy-processor:1.7.5'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
+    testCompile 'junit:junit:4.12'
 }
-
-
-
-
-
-
-
-
-
